# pg2md

./: .gitignore  README.md  pyproject.toml
pg2md/: __init__.py  html_to_md.py
